# libmidi

./: CMakeLists.txt  ChannelEvent.cpp  ChannelEvent.h  LICENSE  MetaEvent.cpp  MetaEvent.h  Midi.cpp  Midi.h  MidiChannel.cpp  MidiChannel.h  MidiEvent.cpp  MidiEvent.h  MidiEventFactory.cpp  MidiEventFactory.h  MidiFile.cpp  MidiFile.h  MidiIOUtils.cpp  MidiIOUtils.h  README.md  SystemCommonEvent.cpp  SystemCommonEvent.h  SystemRealtimeEvent.cpp  SystemRealtimeEvent.h  main.cpp
synth/: adsr.cpp  synth.cpp  synth.h
